# vp-track-status

./: .gitignore  CLAUDE.md  README.md  fetch_rainfall.py  lefthook.yml  main.py  pyproject.toml
.github/workflows/: deploy_website.yml  test.yml  update_data.yml
data/: rainfall_239374TP_daily.csv
data/models/: track_condition_model.onnx
data/observations/: track_observations.csv
data/rainfall/: rainfall_239374TP_daily.csv
scripts/: update_data.sh
src/vp_track_status/: __init__.py  cli.py  constants.py  features.py  model.py  predict.py  rainfall.py  website.py
tests/: conftest.py  test_features.py  test_model.py  test_predict.py  test_rainfall.py  test_website.py
