[project]
name = "vp-track-status"
version = "0.1.0"
description = "Victoria Park Track Status - Predict track running conditions based on rainfall data"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "polars>=1.18.0",
    "requests>=2.32.5",
    "onnxruntime>=1.19.0",
]

[project.scripts]
vp-track-status = "vp_track_status.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.14.5",
]
train = [
    "scikit-learn>=1.5.0",
    "skl2onnx>=1.17.0",
    "onnx>=1.16.0",
]
